# slim-client-protocol-rs

./: .travis.yml  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: rust.yml
examples/: Cargo.toml  boring.rs  discover.rs  hello.rs  keep_alive.rs  monitor.rs  player.rs
slimproto/: Cargo.toml  hello.rs
slimproto/src/: buffer.rs  capability.rs  codec.rs  discovery.rs  framing.rs  lib.rs  proto.rs  status.rs
slimproto/src/util/: mod.rs  socketreader.rs
