[[example]]
name = 'discover'
path = 'discover.rs'

[[example]]
name = 'hello'
path = 'hello.rs'

[[example]]
name = 'keep_alive'
path = 'keep_alive.rs'

# [[example]]
# name = 'player'
# path = 'player.rs'

[package]
edition = '2021'
name = 'examples'
publish = false
version = '0.0.1'

[dependencies]
slimproto = {path = '../slimproto', version = '*'}

