[[example]]
name = 'discover'
path = 'discover.rs'

[[example]]
name = 'hello'
path = 'hello.rs'

[[example]]
name = 'keep_alive'
path = 'keep_alive.rs'

[[example]]
name = 'player'
path = 'player.rs'

[package]
edition = '2021'
name = 'examples'
publish = false
version = '0.0.1'

[dependencies]
anyhow = "1.0.71"
crossbeam = "0.8.2"
libpulse-binding = "2.28.1"
slimproto = { path = '../slimproto', version = '*' }
symphonia = { version = "0.5.3", features = [
    "aac",
    "mp3",
    "flac",
    "ogg",
    "pcm",
    "vorbis",
] }
