[package]
authors = ['Geoff Clements <ro2kz0@gmail.com>']
description = "A library for building Slim protocol clients"
documentation = "https://docs.rs/slimproto"
edition = '2021'
homepage = "https://github.com/GeoffClements/slim-client-protocol-rs"
license = "MIT"
name = 'slimproto'
readme = "../README.md"
repository = "https://github.com/GeoffClements/slim-client-protocol-rs"
version = '0.1.4'

[dependencies]
bitflags = "2.3.3"
bytes = "1.4.0"
http_tiny = "1.1.0"
mac_address = "1.1.5"

[dev-dependencies]
socket-server-mocker = "0.0.4"
