[package]
authors = ['Geoff Clements <ro2kz0@gmail.com>']
description = "A library for building Slim protocol clients"
documentation = "https://docs.rs/slimproto"
edition = '2021'
homepage = "https://github.com/GeoffClements/slim-client-protocol-rs"
license = "MIT"
name = 'slimproto'
readme = "../README.md"
repository = "https://github.com/GeoffClements/slim-client-protocol-rs"
version = '0.1.23'

[dependencies]
bitflags = "2.9.1"
bytes = "1.10.1"
framous = "0.1.8"
mac_address = "1.1.8"
